# SwingTrader

./: .gitignore  README.md  SwingTrader.bat  SwingTrader.spec  pyproject.toml  swing-trader.bat
docs/plans/: 2026-01-31-model-integration.md  2026-01-31-swing-trader-ml.md  2026-02-25-training-backtest-overhaul-implementation.md  2026-02-25-training-backtest-overhaul.md
src/swing_trader/: cli.py  config.py
src/swing_trader/backtest/: __init__.py  engine.py  walk_forward.py
src/swing_trader/data/: __init__.py  cache.py  fetcher.py  pipeline.py  splits.py
src/swing_trader/evaluation/: __init__.py  bootstrap.py  evaluator.py  regime.py
src/swing_trader/features/: __init__.py  indicators.py  labeler.py
src/swing_trader/models/: __init__.py  base.py  ensemble.py  lstm.py  random_forest.py  xgboost_model.py
src/swing_trader/services/: __init__.py  mlflow_tracking.py  model_registry.py
src/swing_trader/signals/: __init__.py  generator.py
src/swing_trader/training/: __init__.py  metadata.py  tracker.py  tuner.py
src/swing_trader/ui/: __init__.py  app.py  theme.py
src/swing_trader/ui/components/: __init__.py  charts.py
src/swing_trader/ui/views/: __init__.py  backtest.py  models.py  signals.py  training.py
tests/: test_backtest.py  test_bootstrap.py  test_cache.py  test_config.py  test_evaluator.py  test_fetcher.py  test_indicators.py  test_integration.py  test_labeler.py  test_models.py  test_regime.py  test_signals.py  test_splits.py  test_walk_forward.py
