[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swing-trader"
version = "0.1.0"
description = "ML-powered swing trading signals with GPU acceleration"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "torch>=2.0.0",
    "mlflow>=2.10.0",
    "optuna>=3.5.0",
    "optuna-integration>=3.5.0",
    "dearpygui>=2.0.0",
    "pytest>=7.0.0",
    "joblib>=1.3.0",
]

[project.scripts]
swing-trader = "swing_trader.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
